Mon Oct 30 20:34:29 2000  David Helder  <dhelder@umich.edu>

	* examples/echoserver.c (async_echoserver): Code cleanups

Sun Oct 29 22:44:22 2000  David Helder  <dhelder@umich.edu>

	* examples/echo*.c: s/--nonblocking/--async/ since it's
	    asynchronous, not nonblocking.
	
	* examples/echoclient.c: Added example showing GConn way.  Started
	   showing asynchronous example.  UNFINISHED.

	* src/iochannel.c (gnet_io_channel_readline_check_func): 
	    Don't replace \n with \0.  This is what readline
	    does.

	* examples/echoserver.c: Added example showing GServer way
	* src/server.h (GServerFunc): s/struct _GConn/GConn/
	* examples/echoserver.c: Clean-ups

Sun Oct 29 17:50:46 2000  David Helder  <dhelder@umich.edu>

	* examples/echoserver.c: Fixed non-blocking server example.  It
	    had a couple problems.  It should not have switched on the
	    condition, because it's a bit field, not an enum.  It should
	    have done better error checking too.

	* BUGS: Added

	* src/pack.c: Change 'P' to 'v' for void pointer.  Void
	   pointer will always be native size.
	* src/pack.c: Updated docs
	
Thu Oct 26 16:23:29 2000  David Helder  <dhelder@umich.edu>

	* gnet.spec.in (Group): Integrated Benjamin Kahn's patch.
	   lib/gnet wasn't being include in the dev RPM.
	
Sat Oct 21 01:09:52 2000  David Helder  <dhelder@umich.edu>

	* examples/unpack.c: Added
	* examples/pack.c: Added more tests 

	* src/pack.c (gnet_vunpack): unpack s is now like pack s.  Use r
	    or S for old semantics
	* src/pack.c (strlenn): Fixed.  Fixes unpack s
	* src/pack.c: Fixed pack/unpack of big endian pointers (like
	    you'd ever do this...)
	* src/pack.c (gnet_vpack): Fix pack R
	* src/pack.c (gnet_vpack): p can now be repeated
	
	* src/pack.c: Made sure va_arg uses only int or double.  This
	    should fix gcc 2.76 warning Joe found.

Fri Oct 20 11:27:08 2000  David Helder  <dhelder@umich.edu>

	* src/*.[ch]: Added Copyright line for Andy to files
	    he changed/added to.
